Bug 659205 - tier_platform_dirs doesn't include APP_LIBXUL_DIRS (mailnews/ etc) -- mailnews, xpfe autocomplete etc aren't getting built r=neil/bienvenu a=CLOSED TREE