mailnews/base/public/msgCore.h
@@ -206,20 +206,8 @@ NS_ERROR_GENERATE_FAILURE(NS_ERROR_MODULE_MAILNEWS, value)
 #define MSG_LINEBREAK_LEN 1
 #endif
 
-#if defined(MOZ_ENABLE_LIBXUL)
 #define NS_MSG_BASE
 #define NS_MSG_BASE_STATIC_MEMBER_(type) type
-#else
-
-#ifdef _IMPL_NS_MSG_BASE
-#define NS_MSG_BASE                      NS_EXPORT
-#define NS_MSG_BASE_STATIC_MEMBER_(type) NS_EXPORT_STATIC_MEMBER_(type)
-#else
-#define NS_MSG_BASE                      NS_IMPORT
-#define NS_MSG_BASE_STATIC_MEMBER_(type) NS_IMPORT_STATIC_MEMBER_(type)
-#endif
-
-#endif // MOZ_ENABLE_LIBXUL
 
 #endif // msgCore_h__
 
